fix(a11y): use rems for progresssteps gap

--- a/src/sweetalert2.scss
+++ b/src/sweetalert2.scss
@@ -717,8 +717,8 @@ body {
   $blue: #3085d6;
 
   font-weight: 600;
-  margin: 0 0 20px;
-  padding: 0;
+  margin: 0 0 1.25rem;
+  align-items: center;
 
   li {
     display: inline-block;
